public/styles/super-inline.css
/* extracted style block 1 */
@font-face {
        font-family: "Noto Sans";
        font-style: normal;
        font-weight: 400;
        src: url("/fonts/noto-sans-v27-regular.woff2") format("woff2");
        
      }
    
      @font-face {
        font-family: "Noto Sans";
        font-style: normal;
        font-weight: 500;
        src: url("/fonts/noto-sans-v27-500.woff2") format("woff2");
        
      }
    
      @font-face {
        font-family: "Noto Sans";
        font-style: normal;
        font-weight: 600;
        src: url("/fonts/noto-sans-v27-600.woff2") format("woff2");
        
      }
    
      @font-face {
        font-family: "Noto Sans";
        font-style: normal;
        font-weight: 700;
        src: url("/fonts/noto-sans-v27-700.woff2") format("woff2");
        
      }


/* extracted style block 2 */
html {
      font-size: 16px;
    }

span[data-link-style="icon"] > a.notion-link.link:before,
a[data-link-style="icon"].notion-link.link:before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  transform: translateY(-52%);
  height: var(--link-icon-size);
  width: var(--link-icon-size);
  background-size: 20px 20px;
  background-repeat: no-repeat;
  background-color: white;
  background-position: center;
  border-radius: 6px;
}

/* Icon-prefixed links: only the icon slot differs; text styling stays on `a.notion-link.link`. */
span[data-link-style="icon"] > a.notion-link.link,
a[data-link-style="icon"].notion-link.link {
  --link-icon-size: 24px;
  --link-icon-space: 25px;
}

span[data-link-style="icon"] > a.notion-link.link:before,
a[data-link-style="icon"].notion-link.link:before {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2337352f' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M7 17 17 7'/%3E%3Cpath d='M9 7h8v8'/%3E%3C/svg%3E");
  background-size: 15px 15px;
  box-shadow: inset 0 0 0 1px rgba(55, 53, 47, 0.12);
}

span[data-link-style="icon"] > a[href="https://twitter.com/_jinnkunn"].notion-link.link:before,
a[data-link-style="icon"][href="https://twitter.com/_jinnkunn"].notion-link.link:before {
  background-image: url(/web_image/x.svg);
  background-size: 26px 26px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href="/blog"].notion-link.link:before,
a[data-link-style="icon"][href="/blog"].notion-link.link:before {
  background-image: url(/web_image/blog-b.svg);
  background-size: 20px 20px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href="/blog.rss"].notion-link.link:before,
a[data-link-style="icon"][href="/blog.rss"].notion-link.link:before {
  background-image: url(/web_image/rss.svg);
  background-size: 20px 20px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href="https://www.linkedin.com/in/jinkun-chen/"].notion-link.link:before,
a[data-link-style="icon"][href="https://www.linkedin.com/in/jinkun-chen/"].notion-link.link:before {
  background-image: url(/web_image/linkedin-blue.svg);
  background-size: 20px 20px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href="/chen"].notion-link.link:before,
a[data-link-style="icon"][href="/chen"].notion-link.link:before {
  background-image: url(/web_image/chen-seal.svg);
  background-size: 20px 20px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href="https://dal.ca/"].notion-link.link:before,
span[data-link-style="icon"] > a[href="https://www.dal.ca/"].notion-link.link:before,
a[data-link-style="icon"][href="https://dal.ca/"].notion-link.link:before,
a[data-link-style="icon"][href="https://www.dal.ca/"].notion-link.link:before {
  background-image: url(/web_image/dal-seal.svg);
  background-size: 20px 20px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href*="scholar.google"].notion-link.link:before,
a[data-link-style="icon"][href*="scholar.google"].notion-link.link:before {
  background-image: url(/web_image/google-scholar.svg);
  background-size: 23px 23px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href*="researchgate.net"].notion-link.link:before,
a[data-link-style="icon"][href*="researchgate.net"].notion-link.link:before {
  background-image: url(/web_image/researchgate.svg);
  background-size: 24px 24px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href^="https://orcid.org/"].notion-link.link:before,
a[data-link-style="icon"][href^="https://orcid.org/"].notion-link.link:before {
  background-image: url(/web_image/orcid.svg);
  background-size: 22px 22px;
  box-shadow: none;
}

span[data-link-style="icon"] > a[href*="semanticscholar.org/"].notion-link.link:before,
a[data-link-style="icon"][href*="semanticscholar.org/"].notion-link.link:before {
  background-image: url(/web_image/semantic_scholar.svg);
  background-size: 22px 22px;
  box-shadow: none;
}

span[data-link-style="icon"][data-link-icon] > a.notion-link.link:before,
a[data-link-style="icon"][data-link-icon].notion-link.link:before {
  background-image: var(--link-icon-image, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2337352f' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M7 17 17 7'/%3E%3Cpath d='M9 7h8v8'/%3E%3C/svg%3E"));
  background-size: 20px 20px;
  box-shadow: none;
}

.katex-html {
  font-family: Noto Sans !important;
  font-size: 16px !important;
}
/* ... */

